--- a/wp-content/themes/clemo/style.css
+++ b/wp-content/themes/clemo/style.css
@@ -227,7 +227,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 }
 
 .hentry {
-    margin: 0 0 1.5em;
+    margin: 0 0 50px;
 }
 
 .updated:not(.published) {
@@ -237,7 +237,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 .page-content,
 .entry-content,
 .entry-summary {
-    margin: 1.5em 0 0;
+    /*margin: 1.5em 0 0;*/
 }
 
 .page-links {
@@ -587,9 +587,6 @@ nav.navbar {
     max-height: 100%;
 }
 
-/*#reviews img {*/
-    /*filter: grayscale(100%);*/
-/*}*/
 @media (max-width: 768px) {
     .carousel-image-wrapper {
         height: 100px;
@@ -665,8 +662,8 @@ nav.navbar {
 }
 
 .img-wrapper img {
-    width: auto;
-    /*height: 100%;*/
+    width: 100%;
+    height: 100%;
 }
 
 .gallery .img-wrapper img {
@@ -715,7 +712,7 @@ nav.navbar {
 }
 
 p.post-subtitle {
-    text-align: center;
+    /*text-align: center;*/
     font-size: 1.5rem;
 }
 
@@ -811,4 +808,8 @@ p.icon-left {
 
 .left-half p {
     min-height: 60px;
+}
+
+.post-title {
+
 }
