--- a/wp-content/themes/clemo/style.css
+++ b/wp-content/themes/clemo/style.css
@@ -495,6 +495,16 @@ p button {
     }
 }
 
+.mt100 {
+    margin-top: 100px;
+}
+
+@media (max-width: 768px) {
+    .mt100 {
+        margin-top: 50px;
+    }
+}
+
 .mb50 {
     margin-bottom: 50px;
 }
@@ -798,8 +808,13 @@ p.icon-left {
     padding-left: 35px;
 }
 
-.quote {
-    margin-left: -50px;
+blockquote {
+    margin-left: 50px;
+    font-weight: bold;
+    font-size: 21px;
+    background: linear-gradient(black, black) left top no-repeat;
+    background-size: 40px 2px;
+    padding-top: 10px;
 }
 .left-half {
     text-align: right;
@@ -811,5 +826,21 @@ p.icon-left {
 }
 
 .post-title {
+    font-size: 2rem;
+    /*text-align: center;*/
+}
+.post-title small {
+    font-size: 70%;
+}
 
+li.comment {
+    padding: 20px;
+    margin: 10px;
+    background-color: rgba(0, 0, 0, 0.05);
+}
+textarea#comment {
+    /*width: 50%;*/
+}
+#comments {
+    /*width: 100%;*/
 }
