--- a/wp-content/themes/clemo/style.css
+++ b/wp-content/themes/clemo/style.css
@@ -839,7 +839,7 @@ li.comment {
     background-color: rgba(0, 0, 0, 0.05);
 }
 textarea#comment {
-    /*width: 50%;*/
+    width: 50%;
 }
 #comments {
     /*width: 100%;*/
