--- a/wp-content/themes/clemo/style.css
+++ b/wp-content/themes/clemo/style.css
@@ -717,7 +717,8 @@ nav.navbar {
 }
 
 .section-title {
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     text-align: center;
 }
 
