contacts header, share, gallery%6, post gallery, achievements, btns without refs, content-achievements

--- a/wp-content/themes/clemo/style.css
+++ b/wp-content/themes/clemo/style.css
@@ -548,6 +548,8 @@ nav.navbar {
 
 #menu-main-menu li.menu-item {
     color: rgba(0, 0, 0, 0.5);
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 #banner-owl {
