share, post gallery, achievements, content-achievements, 404 page, fonts local

--- a/wp-content/themes/clemo/assets/css/custom.sass
+++ b/wp-content/themes/clemo/assets/css/custom.sass
@@ -9,6 +9,8 @@ $container-small: 350px
 body
   font-family: 'Montserrat', sans-serif
   font-size: 18px
+footer
+  border-top: 1px solid grey
 a
   cursor: default
   text-decoration: none
