--- a/wp-content/themes/clemo/assets/css/custom.css
+++ b/wp-content/themes/clemo/assets/css/custom.css
@@ -2,6 +2,9 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 18px; }
 
+footer {
+  border-top: 1px solid grey; }
+
 a {
   cursor: default;
   text-decoration: none;
