--- a/wp-content/themes/clemo/assets/css/custom.css
+++ b/wp-content/themes/clemo/assets/css/custom.css
@@ -1,5 +1,8 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/montserratlight.ttf"); }
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", Arial sans-serif;
   font-size: 18px; }
 
 footer {
@@ -171,6 +174,9 @@ a.nav-item {
   border-radius: 20px; }
   .btn-white:hover {
     border-color: black; }
+
+a.btn-white:hover {
+  border-color: black !important; }
 
 .black .btn-white:hover {
   background-color: #ffe1bd; }
