--- a/wp-content/themes/clemo/style.css
+++ b/wp-content/themes/clemo/style.css
@@ -369,6 +369,11 @@ object {
 
 /* CUSTOM */
 
+@font-face {
+    font-family: 'Montserrat';
+    src: url('assets/fonts/montserratlight.ttf');
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
@@ -594,6 +599,7 @@ nav.navbar {
     width: 170px;
     margin-bottom: 20px;
 }
+
 .carousel-image-wrapper img {
     max-width: 100%;
     max-height: 100%;
@@ -630,6 +636,7 @@ nav.navbar {
 
 .btn-white:hover {
     border-color: black;
+    color: black;
 }
 
 .black .btn-white:hover {
@@ -691,6 +698,7 @@ nav.navbar {
     .img-wrapper-big {
         height: 300px;
     }
+
     .img-wrapper-small {
         height: 180px;
     }
@@ -819,6 +827,7 @@ blockquote {
     background-size: 40px 2px;
     padding-top: 10px;
 }
+
 .left-half {
     text-align: right;
     padding-right: 30px;
@@ -832,6 +841,7 @@ blockquote {
     font-size: 2rem;
     /*text-align: center;*/
 }
+
 .post-title small {
     font-size: 70%;
 }
@@ -841,13 +851,15 @@ li.comment {
     margin: 10px;
     background-color: rgba(0, 0, 0, 0.05);
 }
+
 textarea#comment {
     width: 50%;
 }
+
 #comments {
     /*width: 100%;*/
 }
 
-.bisque .post-title a:hover{
+.bisque .post-title a:hover {
     color: white;
 }
