--- a/wp-content/themes/clemo/assets/css/custom.sass
+++ b/wp-content/themes/clemo/assets/css/custom.sass
@@ -12,7 +12,7 @@ $container-small: 400px
 
 //Global
 body
-  font-family: 'Montserrat', Arial sans-serif
+  font-family: 'Montserrat', sans-serif
   font-size: 18px
 
 footer
@@ -322,16 +322,16 @@ p.icon-left
   color: black
   background: linear-gradient(black, black) left bottom no-repeat
   background-size: 20px 2px
-
-#menu-main-menu li.page_item.current_page_item:hover
-  background: linear-gradient(#ffe1bd, #ffe1bd) left bottom no-repeat
-  background-size: 20px 2px
+  &:hover
+    background: linear-gradient(#ffe1bd, #ffe1bd) left bottom no-repeat
+    background-size: 20px 2px
 
 #menu-main-menu li.menu-item
   color: rgba(0, 0, 0, 0.5)
   margin-top: 5px
   margin-bottom: 5px
-
+  &:hover
+    color: $bisque
 
 .carousel-image-wrapper img
   max-width: 100%
@@ -381,5 +381,6 @@ li.comment
 textarea#comment
   width: 50%
 
-.bisque .post-title a:hover
-  color: white
+.bisque .post-title a
+  &:hover
+    color: white
