share, post gallery, content-achievements, 404 page, works pagination

--- a/wp-content/themes/clemo/assets/css/custom.sass
+++ b/wp-content/themes/clemo/assets/css/custom.sass
@@ -2,6 +2,7 @@
 $magnate: rgb(152, 152, 152)
 $platinum: rgb(229, 229, 229)
 $bisque: rgb(255, 225, 189)
+//Image wrapper size
 $container-big: 550px
 $container-small: 400px
 
@@ -16,7 +17,7 @@ body
   font-size: 18px
 
 footer
-  border-top: 1px solid grey
+  border-top: 1px solid lightgray
 
 a
   cursor: default
