--- a/wp-content/themes/clemo/assets/css/custom.css
+++ b/wp-content/themes/clemo/assets/css/custom.css
@@ -6,7 +6,7 @@ body {
   font-size: 18px; }
 
 footer {
-  border-top: 1px solid grey; }
+  border-top: 1px solid lightgray; }
 
 a {
   cursor: default;
