--- a/wp-content/themes/clemo/assets/css/custom.css
+++ b/wp-content/themes/clemo/assets/css/custom.css
@@ -1,13 +1,19 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.ttf"); }
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 18px; }
+
+footer {
+  border-top: 1px solid lightgray; }
 
 a {
   cursor: default;
   text-decoration: none;
   color: inherit; }
   a:hover {
-    color: #ffe1bd !important;
+    color: #ffe1bd;
     text-decoration: none; }
 
 img {
@@ -37,23 +43,23 @@ div.hr {
 
 @media (max-width: 576px) {
   .sm-center {
-    margin: auto !important;
-    text-align: center !important; } }
+    margin: auto;
+    text-align: center; } }
 
 p button {
-  margin-left: 15px; }
+  margin-left: 5px; }
 
 .pt100 {
-  padding-top: 100px; }
+  padding-top: 80px; }
   @media (max-width: 768px) {
     .pt100 {
-      padding-top: 50px; } }
+      padding-top: 40px; } }
 
 .pb100 {
-  padding-bottom: 100px; }
+  padding-bottom: 80px; }
   @media (max-width: 768px) {
     .pb100 {
-      padding-bottom: 50px; } }
+      padding-bottom: 40px; } }
 
 .pr30 {
   padding-right: 30px; }
@@ -68,7 +74,7 @@ p button {
       padding-top: 20px; } }
 
 .pb50 {
-  padding-bottom: 50px; }
+  padding-bottom: 40px; }
   @media (max-width: 768px) {
     .pb50 {
       padding-bottom: 20px; } }
@@ -80,22 +86,22 @@ p button {
       margin-top: inherit; } }
 
 .mt50 {
-  margin-top: 50px; }
+  margin-top: 40px; }
   @media (max-width: 768px) {
     .mt50 {
       margin-top: 20px; } }
 
 .mb50 {
-  margin-bottom: 50px; }
+  margin-bottom: 40px; }
   @media (max-width: 768px) {
     .mb50 {
       margin-bottom: 20px; } }
 
 .mb100 {
-  margin-bottom: 100px; }
+  margin-bottom: 80px; }
   @media (max-width: 768px) {
     .mb100 {
-      margin-bottom: 50px; } }
+      margin-bottom: 40px; } }
 
 span .navbar-toggler {
   background-color: black; }
@@ -109,7 +115,7 @@ a.nav-item.active {
   background-size: 20px 2px; }
 
 a.nav-item {
-  padding-left: 0 !important;
+  padding-left: 0;
   padding-right: 30px !important; }
 
 #banner-owl {
@@ -167,10 +173,14 @@ a.nav-item {
   border: 1px solid #e5e5e5;
   border-radius: 20px; }
   .btn-white:hover {
-    border-color: black; }
+    border-color: black;
+    color: black; }
 
 .black .btn-white:hover {
   background-color: #ffe1bd; }
+
+.thumbnail-wrapper img {
+  max-height: 400px; }
 
 .gallery-wrapper {
   margin-bottom: 20px; }
@@ -196,7 +206,7 @@ a.nav-item {
   text-align: center; }
   @media (max-width: 768px) {
     .img-wrapper {
-      height: 350px !important; } }
+      height: 400px; } }
   .img-wrapper:hover .popup {
     display: block; }
 
@@ -205,10 +215,15 @@ a.nav-item {
   height: 100%; }
 
 .img-wrapper-big {
-  height: 600px; }
+  height: 550px; }
+  .img-wrapper-big .img-wrapper-big {
+    height: 385px; }
 
 .img-wrapper-small {
-  height: 350px; }
+  height: 400px; }
+  @media (max-width: 768px) {
+    .img-wrapper-small {
+      height: 280px; } }
 
 @media (min-width: 576px) {
   div.p-0 div.img-wrapper-small {
@@ -223,13 +238,13 @@ a.nav-item {
       margin-bottom: 30px; } }
 
 .section-title {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 65px;
+  padding-bottom: 65px;
   text-align: center; }
   @media (max-width: 768px) {
     .section-title {
-      padding-top: 50px;
-      padding-bottom: 50px; } }
+      padding-top: 30px;
+      padding-bottom: 30px; } }
 
 section.black {
   background-color: black;
@@ -288,5 +303,75 @@ p.icon-left {
 
 .quote {
   margin-left: -50px; }
+
+#menu-main-menu li {
+  margin-left: 30px; }
+
+#menu-main-menu li.page_item.current_page_item {
+  color: black;
+  background: linear-gradient(black, black) left bottom no-repeat;
+  background-size: 20px 2px; }
+
+#menu-main-menu li.page_item.current_page_item:hover {
+  background: linear-gradient(#ffe1bd, #ffe1bd) left bottom no-repeat;
+  background-size: 20px 2px; }
+
+#menu-main-menu li.menu-item {
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: 5px;
+  margin-bottom: 5px; }
+
+#menu-main-menu li.menu-item:hover {
+  color: #ffe1bd; }
+
+.carousel-image-wrapper img {
+  max-width: 100%;
+  max-height: 100%; }
+
+.img-wrapper img {
+  width: 100%;
+  height: 100%; }
+
+.gallery .img-wrapper img {
+  width: 100%;
+  height: 100%; }
+
+p.post-subtitle {
+  font-size: 1.5rem; }
+
+.share-wrapper:last-child {
+  margin-right: 0; }
+
+blockquote {
+  margin-left: 50px;
+  font-weight: bold;
+  font-size: 21px;
+  background: linear-gradient(black, black) left top no-repeat;
+  background-size: 40px 2px;
+  padding-top: 10px; }
+
+.left-half {
+  text-align: right;
+  padding-right: 30px; }
+
+.left-half p {
+  min-height: 60px; }
+
+.post-title {
+  font-size: 2rem; }
+
+.post-title small {
+  font-size: 70%; }
+
+li.comment {
+  padding: 20px;
+  margin: 10px;
+  background-color: rgba(0, 0, 0, 0.05); }
+
+textarea#comment {
+  width: 50%; }
+
+.bisque .post-title a:hover {
+  color: white; }
 
 /*# sourceMappingURL=custom.css.map */
